apps/ghost-blog/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
  labels:
    app: ghost
    app.kubernetes.io/instance: ghost-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: ghost
    app.kubernetes.io/part-of: ghost
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: ghost
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: ghost
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: ghost
    protocol: TCP
    port: 80
    targetPort: 2368
  internalTrafficPolicy: Cluster
